--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         }
     }
 </style>
-<div class="mobileShow" style="position: absolute; top: 50%;left: 50%; transform:translate(-50%, -50%)">
+<div class="mobileShow" style="position: absolute; top: 50%;left: 50%; transform:translate(-50%, -50%); text-align: center;">
     Please view on desktop.
 </div>
 
